@@ -17,7 +17,6 @@
 package org.apache.solr.spelling;
 
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Iterator;
@@ -33,8 +32,6 @@ import org.apache.lucene.search.spell.WordBreakSpellChecker.BreakSuggestionSortM
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.search.SolrIndexSearcher;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * A spellchecker that breaks and combines words.
@@ -49,9 +46,6 @@ import org.slf4j.LoggerFactory;
  * properly sets these flags.
  */
 public class WordBreakSolrSpellChecker extends SolrSpellChecker {
-
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
-
   /** Try to combine multiple words into one? [true|false] */
   public static final String PARAM_COMBINE_WORDS = "combineWords";
 
@@ -66,14 +60,6 @@ public class WordBreakSolrSpellChecker extends SolrSpellChecker {
 
   /** See {@link WordBreakSpellChecker#setMinBreakWordLength} */
   public static final String PARAM_MIN_BREAK_WORD_LENGTH = "minBreakLength";
-
-  /**
-   * See {@link BreakSuggestionTieBreaker} for options.
-   *
-   * @deprecated Only used for backwards compatibility. It will be removed in 10.x.
-   */
-  @Deprecated(since = "9.6")
-  private static final String PARAM_BREAK_SUGESTION_TIE_BREAKER = "breakSugestionTieBreaker";
 
   /** See {@link BreakSuggestionTieBreaker} for options. */
   public static final String PARAM_BREAK_SUGGESTION_TIE_BREAKER = "breakSuggestionTieBreaker";
@@ -106,17 +92,6 @@ public class WordBreakSolrSpellChecker extends SolrSpellChecker {
     breakWords = boolParam(config, PARAM_BREAK_WORDS);
     wbsp = new WordBreakSpellChecker();
     String bstb = strParam(config, PARAM_BREAK_SUGGESTION_TIE_BREAKER);
-    if (bstb == null) {
-      bstb = strParam(config, PARAM_BREAK_SUGESTION_TIE_BREAKER);
-      if (bstb != null && log.isWarnEnabled()) {
-        log.warn(
-            "Parameter '"
-                + PARAM_BREAK_SUGESTION_TIE_BREAKER
-                + "' is deprecated and will be removed in Solr 10.x. Please use '"
-                + PARAM_BREAK_SUGGESTION_TIE_BREAKER
-                + "' instead."); // nowarn
-      }
-    }
     if (bstb != null) {
       bstb = bstb.toUpperCase(Locale.ROOT);
       if (bstb.equals(BreakSuggestionTieBreaker.SUM_FREQ.name())) {
